--- a/alpine.html
+++ b/alpine.html
@@ -8,9 +8,9 @@
     <script src="//unpkg.com/alpinejs" defer></script>
   </head>
   <body>
-    <div x-data="{open:false}">
-      <button x-on:click="open = !open">Menu</button>
-      <nav x-show="open" x-on:click.away="open = false">
+    <div x-data="data()" x-init="start()">
+      <button x-on:click="isOpen()">Menu</button>
+      <nav x-show="open" x-on:click.away="close()">
         <ul>
           <li>Item1</li>
           <li>Item2</li>
@@ -19,5 +19,21 @@
         </ul>
       </nav>
     </div>
+    <script>
+      function data() {
+        return {
+          open: null,
+          start(){
+              this.open = true
+          },
+          isOpen() {
+            this.open = !this.open;
+          },
+          close() {
+            this.open = false;
+          },
+        };
+      }
+    </script>
   </body>
 </html>
