--- a/alpine.html
+++ b/alpine.html
@@ -6,25 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="//unpkg.com/alpinejs" defer></script>
+
+    <style>
+      .hidden{
+        display: none;
+      }
+    </style>
+
   </head>
   <body>
+
     <div x-data="data()" x-init="start()">
-      <button x-on:click="isOpen()">Menu</button>
-      <nav x-show="open" x-on:click.away="close()">
+
+      <button :disabled="open"  @click="isOpen()">
+        Menu
+      </button>
+
+      <nav class="hidden" :class="{'hidden': !open}" @click.away="close()">
+
         <ul>
           <li>Item1</li>
           <li>Item2</li>
           <li>Item3</li>
           <li>Item4</li>
         </ul>
+
       </nav>
+
     </div>
+
     <script>
       function data() {
         return {
           open: null,
           start(){
-              this.open = true
+              this.open = false;
           },
           isOpen() {
             this.open = !this.open;
@@ -35,5 +51,6 @@
         };
       }
     </script>
+
   </body>
 </html>
